--- a/.github/workflows/setup-actions-runner.yml
+++ b/.github/workflows/setup-actions-runner.yml
@@ -14,6 +14,7 @@ jobs:
     steps:
       - name: Install CertManager
         run: |
+          oc login -u ${{ secrets.USERNAME }} ${{ secrets.CLUSTER_API_URL }}
           helm repo add jetstack https://charts.jetstack.io
           helm repo update
           helm install \
