--- a/.github/workflows/setup-actions-runner.yml
+++ b/.github/workflows/setup-actions-runner.yml
@@ -18,7 +18,7 @@ jobs:
           
       - name: Login to {{ github.environment }}
         run: |
-          if [ helm status cert-manager  -n cert-2manager  -o json | jq '.info.status' == 'Error: release: not found') ]; then
+          if $(helm status cert-manager  -n cert-manager  -o json | jq '.info.status' == 'Error: release: not found'); then
             helm repo add jetstack https://charts.jetstack.io
             helm repo update
             helm install \
